README追記、テストケース追加、内部ストレージ高速化